k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops-app
  labels:
    app.kubernetes.io/name: gitops-app
    env: production
